<resources>
    <string name="app_name">Smart Detector</string>
    <string name="image_view">Image View</string>
    <string name="detect">Detect</string>
    <string name="run_model">Running</string>
    <string name="restart">Restart</string>
    <string name="select">Select</string>
    <string name="live">Live</string>
    <string name="save">Save</string>
    <string name="explore_the_world">Explore the world</string>
    <string name="smart_detector">SMART DETECTOR</string>
</resources>